chore(ci): enforce layered import boundaries for V2-028

--- a/.github/workflows/typecheck.yml
+++ b/.github/workflows/typecheck.yml
@@ -26,3 +26,6 @@ jobs:
 
       - name: Run typecheck
         run: npm run typecheck
+
+      - name: Enforce layer boundaries
+        run: npm run check:layers
