test(stream): add same-output fixture tests for V2-035

--- a/.github/workflows/typecheck.yml
+++ b/.github/workflows/typecheck.yml
@@ -32,3 +32,6 @@ jobs:
 
       - name: Enforce layer boundaries
         run: npm run check:layers
+
+      - name: Run stream same-output tests
+        run: npm run test:stream-same-output
