--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "typecheck": "npm run type-check",
     "check:layer-js": "node scripts/check-layer-js-allowlist.js",
     "check:layers": "node scripts/check-layer-boundaries.js",
+    "test:stream-same-output": "node --test tests/stream-same-output/getStreamsUseCase.same-output.test.js",
     "docs:jsdoc:clean": "node -e \"require('node:fs').rmSync('docs/jsdoc', { recursive: true, force: true })\"",
     "docs:jsdoc": "npm run docs:jsdoc:clean && jsdoc -c jsdoc.json"
   },
