--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "type-check": "tsc -b tsconfig.shared.json tsconfig.integrations.json tsconfig.services.json tsconfig.app.json && tsc --noEmit -p tsconfig.json",
     "typecheck": "npm run type-check",
+    "smoke:endpoints": "node scripts/smoke-endpoints.js",
     "check:layer-js": "node scripts/check-layer-js-allowlist.js",
     "check:layers": "node scripts/check-layer-boundaries.js",
     "test:stream-same-output": "node --test tests/stream-same-output/getStreamsUseCase.same-output.test.js",
