test(fixtures): capture golden core endpoint responses for V2-012

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ scripts/*
 !scripts/check-layer-boundaries.js
 !scripts/check-layer-js-allowlist.js
 !scripts/smoke-endpoints.js
+!scripts/capture-golden-core.js
 test_nzbs/
 assets/*.nzb
 *.nzb
