--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ scripts/*
 !scripts/check-layer-js-allowlist.js
 !scripts/smoke-endpoints.js
 !scripts/capture-golden-core.js
+!scripts/check-golden-core.js
 test_nzbs/
 assets/*.nzb
 *.nzb
