perf(baseline): add latency and error baseline artifacts for V2-014

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,7 @@ scripts/*
 !scripts/smoke-endpoints.js
 !scripts/capture-golden-core.js
 !scripts/check-golden-core.js
+!scripts/capture-latency-baseline.js
 test_nzbs/
 assets/*.nzb
 *.nzb
