--- a/.github/workflows/typecheck.yml
+++ b/.github/workflows/typecheck.yml
@@ -41,3 +41,13 @@ jobs:
 
       - name: Run stream same-output tests
         run: npm run test:stream-same-output
+
+  docker-build:
+    runs-on: ubuntu-latest
+    needs: typecheck
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Build Docker image (no push)
+        run: docker build --pull --tag usenetstreamer:ci .
