--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fixtures:capture-core": "node scripts/capture-golden-core.js",
     "fixtures:check-core": "node scripts/check-golden-core.js",
     "baseline:latency": "node scripts/capture-latency-baseline.js",
+    "integration:live": "node scripts/live-integration-smoke.js",
     "smoke:endpoints": "node scripts/smoke-endpoints.js",
     "check:layer-js": "node scripts/check-layer-js-allowlist.js",
     "check:layers": "node scripts/check-layer-boundaries.js",
